# complier_service

./: .gitignore  CMakeLists.txt  README.md  default.nix  fetchNixpkgs.nix  package.xml  setup.py
contracts/: package-lock.json  package.json  truffle.js
contracts/contracts/: DAI.sol  TMU.sol  TMUKhimprom.sol  TMUSwisskrono.sol  VCU.sol
contracts/migrations/: 2_vcu_migration.js  3_dai_migration.js  4_tmu_migration.js
db/: countries.db  countries.txt  countries_to_db.py
launch/: agent.launch  sidechain_trader.launch  testnet_erc20.launch  testnet_liability.launch  testnet_trader.launch  trader.launch  worker.launch
robonomics/: genbag.py  model.txt  model_lxu.txt  model_tmu.txt  model_vcu.txt  mybag.bag  objective_tmu_1500.bag  objective_tmu_200.bag  objective_vcu_1000.bag  objective_vcu_200.bag  offer_node.py  one_vcu.bag  test_demand.yaml  test_demand_tmu.yaml
scripts/: contracts.py  trader_node  worker_node
src/complier_service/: contracts.py  footprint.py  ipfs_utils.py
src/offsetting_agent/: contracts.py  footprint.py
